--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
         <button class="drawBtn primary-btn">Play Again</button>
     </div>
 
+    <!-- winner window -->
+    <div class="winner-msg">
+        <h1 class="text-center text-yellow">Winner</h1>
+        <div class="winner"></div>
+        <button id="restartBtn" class="primary-btn">Restart</button>
+    </div>
+
 
 </body>
 </html>
