--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <!-- start game window -->
     <div class="start-game">
-        <h1 class="text-light">Select Character</h1>
+        <h1 class="text-light">Select a Character</h1>
         <div class="profile">
             <div class="img">
                 <img src="./assets/f1.png" class="id" data-id="x" alt="">
